--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,9 @@
     "unordered_map": "cpp",
     "variant": "cpp",
     "vector": "cpp",
-    "algorithm": "cpp"
+    "algorithm": "cpp",
+    "list": "cpp",
+    "thread": "cpp",
+    "fstream": "cpp"
   }
 }
